Fixed alignment

--- a/Tribute/css/tribute.css
+++ b/Tribute/css/tribute.css
@@ -1,24 +1,44 @@
-/* Below CSS is used to make image responsive on web page */
-#image{
-        max-width: 100%;
-        display: block;
-        height: auto;
-}
-
-.header{
-   
-    text-align:center;
-}
-
 
  #main{
-    padding-top:50px;
-    border : 1px solid gray;
+    padding-top:30px;
+    /* border : 1px solid gray; */
     position:relative;
 } 
 
 #contentbox{
-    border : 1px solid green;
-    border-radius : 10px;
+    /* border : 1px solid gray; */
+    border: 1px solid #ccc;
+    border-radius : 15px;
     margin:50px;
+    padding:50px;
+    background-color: rgba(45, 45, 45, 0.1);
+    /* background-color:#ccc; */
 }
+/* Below CSS is used to make image responsive on web page */
+#image{
+    max-width: 100%;
+    display: block;
+    height: auto;
+}
+
+.header{
+text-align:center;
+line-height:30px;
+}
+ 
+#img-div{
+    border : 1px solid ghostwhite;
+    padding : 20px;
+    background-color:white;
+}
+
+#tribute-info{
+    padding:50px;
+}
+
+#cardone #cardtwo #cardthree {
+    border: 1px solid #ccc;
+    background-color:white;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19)
+}
+
